--- a/package.json
+++ b/package.json
@@ -3,8 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
     "@upleveled/react-scripts": "5.0.4",
     "react": "^18.2.0",
@@ -39,6 +37,11 @@
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.1",
     "@types/testing-library__jest-dom": "^5.14.5",
-    "eslint-config-react-app": "^7.0.1"
-  }
+    "eslint-config-react-app": "^7.0.1",
+    "eslint-config-upleveled": "^4.1.9",
+    "stylelint": "^15.6.1",
+    "stylelint-config-upleveled": "^1.0.2",
+    "typescript": "^5.0.4"
+  },
+  "packageManager": "pnpm@8.3.1"
 }
