--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "@testing-library/user-event": "^13.2.1",
     "@upleveled/react-scripts": "5.0.5",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "sass": "^1.62.1",
+    "sharp": "^0.32.1"
   },
   "scripts": {
     "start": "react-scripts start",
